@@ -1,4 +1,4 @@
-dnl CF_XOPEN_SOURCE version: 1 updated: 2003/11/07 14:32:26
+dnl CF_XOPEN_SOURCE version: 2 updated: 2003/11/26 19:29:42
 dnl ---------------
 dnl Try to get _XOPEN_SOURCE defined properly that we can use POSIX functions.
 AC_DEFUN([CF_XOPEN_SOURCE],[
@@ -8,6 +8,9 @@ hpux*) #(vi
 	;;
 linux*) #(vi
 	CF_GNU_SOURCE
+	;;
+osf[[45]]*) #(vi
+	CPPFLAGS="$CPPFLAGS -D_OSF_SOURCE"
 	;;
 *)
 	;;
